# maintenance-os

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
data/: README.md
docs/notebooks/: 1D-CNN_for_fault_prediction_approach (v1).ipynb  1D-CNN_for_fault_prediction_approach (v2 with increased unbalanced weight).ipynb  1D-CNN_for_fault_prediction_approach (v3 with sensor at shaft end).ipynb  1D-CNN_for_fault_prediction_approach (v4 after_extra_screws_bolted).ipynb  1D-CNN_for_fault_prediction_approach (v5 Data_after_bearing&rotor_realignment).ipynb  1D-CNN_for_fault_prediction_approach (v6 Data_after_sleeve_bearing_replacement).ipynb  1D-CNN_for_fault_prediction_approach (v7 Data_after_equal_distance_w_sleeve_bearing).ipynb  Analysis_to_find_best_plots.ipynb  Feature Engineering Approach.ipynb  Initial Analysis.ipynb  Severity_based_Feature_Engineering.ipynb  severity_based_modelling_classification.ipynb
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  batch_view.js  hero.js  history.js  main.js  mock.js  plots.js  stream_view.js  timeline.js
models/: minirocket_pipeline.joblib  model_card.yaml
scripts/: replay_stream.py  run_dev.ps1
src/pmos/: config.py
src/pmos/api/: app.py  deps.py
src/pmos/core/: enums.py  schemas.py
tests/: conftest.py
tests/integration/: test_batch_endpoint.py  test_stream_endpoint.py
tests/unit/: test_buffer.py  test_csv_loader.py  test_iso.py  test_jsonl_loader.py  test_minirocket_predictor.py  test_replay_ingestor.py  test_synthetic_ingestor.py
(+19 files in other folders)
