[project]
name = "pmos"
version = "0.1.0"
description = "Maintenance_OS — vibration-based predictive maintenance backend for rotary machinery."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "sktime>=0.26",
    "numba>=0.59",
    "scipy>=1.11",
    "joblib>=1.3",
    "pyyaml>=6.0",
    "python-multipart>=0.0.7",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "websockets>=12.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
